# data-science-devcontainer

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  compose.podman.yaml  compose.yaml  devcontainer-lock.json  devcontainer.json  postCreate.sh
.devcontainer/compose/: devcontainer.json
data/: .gitkeep
notebooks/: 00-welcome.ipynb
src/ds_workspace/: __init__.py
tests/: test_smoke.py
